--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,20 +1,145 @@
-li {
+body {
+  font-family: 'Lato',Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 18px;
+  line-height: 34px;
+  /* background: url("../images/hogwarts.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover; */
+ }
+
+ * {
+  box-sizing: border-box;
+  margin: 0;
+} 
+
+#container {
+  width: 900px;
+  margin: 30px auto;
+  display: grid;
+  grid-template-columns: [col-1] 2fr [col-2] 2fr ;
+  grid-template-rows: [row-1] 300px [row-2] 1fr [row-3] 2fr;
+  grid-gap: 10px;
+}
+
+#title {
+  grid-column: 1/3;
+  grid-row: 1/2;
+  margin:20px auto;
+}
+
+textarea {
+  margin: 2rem;
+  font: inherit;
+}
+
+#add-burger {
+  grid-column: 1/3;
+  grid-row:2/3;
+  margin:20px auto;
+}
+
+h1 {
+  font-size: 3rem;
+  color:#987650;
+  text-align: center;
+  padding-bottom: 20px;
+  font-weight: bolder;
+}
+
+img {
+  margin-bottom: 1em;
+  display: block;
+  margin: 0 auto;
+}
+
+#add-burger {
+  padding-top: 2rem;
+}
+
+h2 {
+  font-size: 2rem;
+  text-align: center;
+  color: #ab3c3c;
+  
+}
+
+.btn {
+	border: none;
+	font-family: inherit;
+	font-size: inherit;
+	color: inherit;
+	background: none;
+	cursor: pointer;
+	padding: 10px 40px;
+	display: inline-block;
+	margin: 15px 30px;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+  font-weight: 700;
+  font-size: 1rem;
+	outline: none;
+	position: relative;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.btn:after {
+	content: '';
+	position: absolute;
+	z-index: -1;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.btn-2 {
+	background: #ff8256;;
+	color: #fff;
+	box-shadow: 0 6px #ab3c3c;
+	-webkit-transition: none;
+	-moz-transition: none;
+	transition: none;
+}
+
+.btn-2a {
+  border-radius: 0 0 5px 5px;
+  margin:auto;
+  display:block;
+}
+
+ .btn-2a:hover {
+	box-shadow: 0 4px #ab3c3c;
+}
+
+.btn-2a:active {
+	box-shadow: 0 0 #ff8256;;
+	top: 6px;
+} 
+
+#wish-list, #devoured-burger  {
+  margin-top:10px;
+  position: relative;
+}
+
+#wish-list ul > li {
     padding: 5px;
     margin: 5px;
-    background: #faebd7;
-  }
-  
-  .label {
-    font-weight: bold;
-  }
-  
-  .create-update-form {
-    padding: 5px;
-    margin: 5px;
-    background: aqua;
-  }
-  
-  .form-group {
-    margin-bottom: 5px;
-  }
-  
+    background:#ffe855;
+}
+
+#wish-list button {
+  font-size: .7rem;
+  margin-bottom: 10px;
+  padding: 5px 20px;
+  display: inline;
+  position: absolute;
+  right: 10px;
+}
+
+
+#devoured-burger ul > li {
+  padding: 5px;
+  margin: 5px;
+  background:#90f18a;
+}
+
