--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-		{{!-- <link rel="stylesheet" href="/assets/css/style.css" type="text/css" /> --}}
+		<link rel="stylesheet" href="/assets/css/reset.css" type="text/css" />
+		<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
 		<title>Burger Wish List</title>
 		{{!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> --}}
 		<script src="https://code.jquery.com/jquery.js"></script>
