--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -2,8 +2,7 @@ body {
   font-family: 'Lato',Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 18px;
   line-height: 34px;
-  /* background: url("../images/hogwarts.jpg") no-repeat center center fixed;
-    -webkit-background-size: cover; */
+  background: url("../img/pattern.png"); 
  }
 
  * {
@@ -18,6 +17,8 @@ body {
   grid-template-columns: [col-1] 2fr [col-2] 2fr ;
   grid-template-rows: [row-1] 300px [row-2] 1fr [row-3] 2fr;
   grid-gap: 10px;
+  background-color: white;
+
 }
 
 #title {
@@ -35,6 +36,10 @@ textarea {
   grid-column: 1/3;
   grid-row:2/3;
   margin:20px auto;
+}
+
+hr {
+  color: #ab3c3c;
 }
 
 h1 {
@@ -59,7 +64,14 @@ h2 {
   font-size: 2rem;
   text-align: center;
   color: #ab3c3c;
+  padding-bottom: 10px;
+}
+
+h3 {
   
+  padding-bottom: 10px;
+  color: #987650;
+
 }
 
 .btn {
@@ -111,11 +123,6 @@ h2 {
 	box-shadow: 0 4px #ab3c3c;
 }
 
-.btn-2a:active {
-	box-shadow: 0 0 #ff8256;;
-	top: 6px;
-} 
-
 #wish-list, #devoured-burger  {
   margin-top:10px;
   position: relative;
@@ -135,7 +142,6 @@ h2 {
   position: absolute;
   right: 10px;
 }
-
 
 #devoured-burger ul > li {
   padding: 5px;
