Finalized App and README

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -41,4 +41,9 @@
             {{/each}}
         </ul>
     </div>
+    <footer class="footer">
+          <div >
+            <a href="https://github.com/JuliaLid/Full-Stack-Burger-App" target="_blank" >GitHub Repo</a>
+          </div>
+        </footer>
 </div>
