--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -15,7 +15,7 @@ body {
   margin: 30px auto;
   display: grid;
   grid-template-columns: [col-1] 2fr [col-2] 2fr ;
-  grid-template-rows: [row-1] 300px [row-2] 1fr [row-3] 2fr;
+  grid-template-rows: [row-1] 300px [row-2] 1fr [row-3] 2fr [row-4 ];
   grid-gap: 10px;
   background-color: white;
 
@@ -105,7 +105,7 @@ h3 {
 }
 
 .btn-2 {
-	background: #ff8256;;
+	background: #ff8256;
 	color: #fff;
 	box-shadow: 0 6px #ab3c3c;
 	-webkit-transition: none;
@@ -147,5 +147,18 @@ h3 {
   padding: 5px;
   margin: 5px;
   background:#90f18a;
+}
+
+footer {
+  background-color:#ffed91;
+  grid-column: 1/3;
+  height: 50px;
+  text-align:center;
+}
+
+footer a {
+ text-decoration: none;
+  color:#ab3c3c;
+  margin:0 auto;
 }
 
