--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,8 +5,9 @@
 		<link rel="stylesheet" href="/assets/css/reset.css" type="text/css" />
 		<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
 		<title>Burger Wish List</title>
+		<link rel="icon" type="image/png" href="/assets/img/favicon.png" sizes="16x16" />
 		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/assets/js//burgers.js"></script>
+		<script src="/assets/js/burgers.js"></script>
 	</head>
 	<body>
 		{{{ body }}}
